# siqad

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
ci/: travis-windows-install.ps1  travis-windows-script.sh
src/: CMakeLists.txt
src/gui/: application.cc
src/gui/widgets/: design_panel.cc
src/gui/widgets/components/: plugin_engine.cc  sim_engine.h  sim_job.cc  sim_job.h
src/gui/widgets/managers/: job_manager.cc  plugin_manager.cc
src/gui/widgets/primitives/: item.h
src/gui/widgets/visualizers/: electron_config_set_visualizer.cc  electron_config_set_visualizer.h  sim_visualizer.cc  sim_visualizer.h
src/phys/siqadconn/: .gitignore  CMakeLists.txt
src/settings/: settings.cc
