cmake_minimum_required(VERSION 3.10)

# for release builds, add flag "-DCMAKE_BUILD_TYPE=Release" (without quotes) when running cmake.

#project(siqadconn VERSION 0.2 LANGUAGES CXX)

if(DEFINED SIQAD_INSTALL_ROOT)
    set(SIQADCONN_INSTALL_DIR "${SIQAD_INSTALL_ROOT}/phys/siqadconn")
elseif(CMAKE_BUILD_TYPE MATCHES Release)
    set(SIQADCONN_INSTALL_DIR "release")
else()
    set(SIQADCONN_INSTALL_DIR "debug")
ENDIF()

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

find_package(Boost REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

set_property(SOURCE siqadconn.i PROPERTY CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(siqadconn.h PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_LIBRARY(siqadconn LANGUAGE python SOURCES siqadconn.i)

SWIG_LINK_LIBRARIES(siqadconn ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})

install(TARGETS ${SWIG_MODULE_siqadconn_REAL_NAME} 
        RUNTIME DESTINATION ${SIQADCONN_INSTALL_DIR}
        LIBRARY DESTINATION ${SIQADCONN_INSTALL_DIR})
